--- a/W-test.tex
+++ b/W-test.tex
@@ -72,7 +72,7 @@
 \affiliation{
 \vspace{0.5cm}
 \textsuperscript{1} Université Libre de Bruxelles, Service of Analysis of the Data (SAD), Bruxelles, Belgium\\\textsuperscript{2} Eindhoven University of Technology, Human Technology Interaction Group, Eindhoven, the Netherlands }
-\keywords{W-test; ANOVA; homogeneity of variance; statistical power; type I error, parametric assumptions\newline\indent Word count: X}
+\keywords{W-test; ANOVA; homogeneity of variance; statistical power; type I error, parametric assumptions\newline\indent Word count: 5870}
 \usepackage{csquotes}
 \usepackage{upgreek}
 \captionsetup{font=singlespacing,justification=justified}
@@ -103,7 +103,7 @@ First author performed simulations. First, second and fourth authors contributed
 Correspondence concerning this article should be addressed to Marie Delacre, CP191, avenue F.D. Roosevelt 50, 1050 Bruxelles. E-mail: \href{mailto:marie.delacre@ulb.ac.be}{\nolinkurl{marie.delacre@ulb.ac.be}}}
 
 \abstract{
-Student's \emph{t}-test and classical \emph{F}-test ANOVA rely on the assumptions that two or more samples are independent, and that independent and identically distributed residuals are normal and have equal variances between groups. We focus on the assumptions of normality and equality of variances, and argue that these assumptions are often unrealistic in the field of psychology. We underline the current lack of attention to these assumptions through an analysis of researchers' practices. Through Monte Carlo simulations we illustrate the consequences of performing the classic parametric \emph{F}-test for ANOVA when the test assumptions are not met on the Type I error rate and statistical power. Under realistic deviations from the assumption of equal variances the classic \emph{F}-test can yield severely biased results and lead to invalid statistical inferences. We examine two common alternatives to the \emph{F}-test, namely the Welch's ANOVA (\emph{W}-test) and the Brown-Forsythe test (\emph{F*}-test). Our simulations show that under a range of realistic scenariosthe \emph{W}-test is a better alternative and we therefore recommend using the \emph{W}-test by default when comparing means. We provide a detailed example explaining how to perform the \emph{W}-test in SPSS and R. We summarize our conclusions in five practical recommendations that researchers can use to improve their statistical practices.
+Student's \emph{t}-test and classical \emph{F}-test ANOVA rely on the assumptions that two or more samples are independent, and that independent and identically distributed residuals are normal and have equal variances between groups. We focus on the assumptions of normality and equality of variances, and argue that these assumptions are often unrealistic in the field of psychology. We underline the current lack of attention to these assumptions through an analysis of researchers' practices. Through Monte Carlo simulations we illustrate the consequences of performing the classic parametric \emph{F}-test for ANOVA when the test assumptions are not met on the Type I error rate and statistical power. Under realistic deviations from the assumption of equal variances the classic \emph{F}-test can yield severely biased results and lead to invalid statistical inferences. We examine two common alternatives to the \emph{F}-test, namely the Welch's ANOVA (\emph{W}-test) and the Brown-Forsythe test (\emph{F*}-test). Our simulations show that under a range of realistic scenariosthe \emph{W}-test is a better alternative and we therefore recommend using the \emph{W}-test by default when comparing means. We provide a detailed example explaining how to perform the \emph{W}-test in SPSS and R. We summarize our conclusions in practical recommendations that researchers can use to improve their statistical practices.
 
 
 }
@@ -113,7 +113,7 @@ Student's \emph{t}-test and classical \emph{F}-test ANOVA rely on the assumption
 
 When comparing independent groups researchers often analyze the means by performing a Student's \emph{t}-test or classical Analysis of Variance (ANOVA) \emph{F}-test (Erceg-Hurn \& Mirosevich, 2008; Keselman et al., 1998; Tomarken \& Serlin, 1986). Both tests rely on the assumptions that independent and identically distributed residuals (1) are sampled from a normal distribution and (2) have equal variances between groups (or homoscedasticity; see Lix, Keselman, \& Keselman, 1996). While a deviation from the normality assumption generally does not strongly affect either the Type I error rates (Glass, Peckham, \& Sanders, 1972; Harwell, Rubinstein, Hayes, \& Olds, 1992; Tiku, 1971) or the power of the \emph{F}-test (David \& Johnson, 1951; Harwell et al., 1992; Srivastava, 1959; Tiku, 1971), the \emph{F}-test is not robust against unequal variances (Grissom, 2000). Unequal variances can alter both the Type I error rate (David \& Johnson, 1951; Harwell et al., 1992) and statistical power (Nimon, 2012; Overall, Atlas, \& Gibson, 1995) of the \emph{F}-test.
 
-Although it important to make sure test assumptions are met before a statistical test is performed, researchers rarely provide information about test assumptions when they report an \emph{F}-test. We examined statistical tests reported in 116 articles in the \emph{Journal of Personality and Social Psychology} published in the year 2016. Fourteen percent of these articles reported a One-Way \emph{F}-test, but only one article indicated that the homogeneity of variances assumption was taken into account. They reported corrected degrees of freedom for unequal variances, which could signal the use of the \emph{W}-test instead of the classical \emph{F}-test. A similar investigation (Hoekstra, Kiers, \& Johnson, 2012) yielded conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the \emph{F}-test is currently used by default, alternatives that are often a better choice exist, such as the Welch's \emph{W} ANOVA (\emph{W}-test), the Alexander-Govern test, James' second order test, and the Brown-Forsythe ANOVA (\emph{F}*-test). Although not the focus of the current article, additional tests exist that allow researchers to examine hypotheses about other relevant parameters of a distribution than the mean (such as standard deviations and the shape of the distribution (see for example Erceg-Hurn \& Mirosevich, 2008; Wilcox, 1998). However, since most researchers currently generate hypotheses about differences between means (Erceg-Hurn \& Mirosevich, 2008; Keselman et al., 1998), we think that a first realistic first step towards progress would be to get researchers to correctly test the hypothesis they are used to.
+Although it important to make sure test assumptions are met before a statistical test is performed, researchers rarely provide information about test assumptions when they report an \emph{F}-test. We examined statistical tests reported in 116 articles in the \emph{Journal of Personality and Social Psychology} published in the year 2016. Fourteen percent of these articles reported a One-Way \emph{F}-test, but only one article indicated that the homogeneity of variances assumption was taken into account. They reported corrected degrees of freedom for unequal variances, which could signal the use of the \emph{W}-test instead of the classical \emph{F}-test. A similar investigation (Hoekstra, Kiers, \& Johnson, 2012) yielded conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the \emph{F}-test is currently used by default, alternatives that are often a better choice exist, such as the Welch's \emph{W} ANOVA (\emph{W}-test), the Alexander-Govern test, James' second order test, and the Brown-Forsythe ANOVA (\emph{F}*-test). Although not the focus of the current article, additional tests exist that allow researchers to compare groups either based on other estimators of central tendency than the mean (see for example Erceg-Hurn \& Mirosevich, 2008; Wilcox, 1998), or based on other relevant parameters of distribution than the central tendency, such as standard deviations and the shape of the distribution (Grissom, 2000; Tomarken \& Serlin, 1986). However, since most researchers currently generate hypotheses about differences between means (Erceg-Hurn \& Mirosevich, 2008; Keselman et al., 1998), we think that a first realistic first step towards progress would be to get researchers to correctly test the hypothesis they are used to.
 
 Although the debate surrounding the assumptions of the \emph{F}-test has been widely explored (see for example the meta-analysis of Harwell et al., 1992), applied researchers still largely ignore the consequences of assumption violations. Non-mathematical pedagogical papers summarizing the arguments seem to be lacking from the literature, and the current paper aims to fill this gap. We will discuss the pertinence of the assumptions of the \emph{F}-test, and focus on the question of heteroscedasticity (that, as we will see, can have major consequences on error rates). We will provide a non-mathematical explanation of how alternatives to the classical \emph{F}-test cope with heteroscedasticity violations. We conducted simulations in which we compare the \emph{F}-test with the most promising alternatives. We argue that when variances are equal between groups, the \emph{W}-test has nearly the same empirical Type I error rate and power as the \emph{F}-test, but when variances are unequal, it provides empirical Type I and Type II error rates that are closer to the expected levels compared to the \emph{F}-test. Since the \emph{W}-test is available in practically all statistical software packages, researchers can immediately improve their statistical inferences by replacing the \emph{F}-test by the \emph{W}-test.
 
@@ -131,7 +131,7 @@ First, while it is obvious that the mean can be influenced by the treatment effe
 
 Second, prior to any experimental treatment, the presence of several subpopulations may lead to departures from the normality assumptions. Subgroup might exist that are unequal on some characteristics relevant to the measurements, that are not controlled within the studied group, which results in mixed distributions. This unavoidable lack of control is inherent of our field given its complexity. As an illustration, Wilcox (2005) writes that pooling two normally-distributed populations that have the same mean but different variances (e.g.~normally distributed scores for schizophrenic and not schizophrenic participants) could result in distributions that are very similar to the normal curve, but with thicker tails. As another example, when assessing a wellness score for the general population, data may be sampled from a left-skewed distribution, because most people are probably not depressed (see Heun, Burkart, Maier, \& Bech, 1999). In this case, people who suffer from depression and people who do not suffer from depression are part of the same population, which can leads to asymmetry in the distribution.
 
-Third, bounded measures can also explain non-normal distributions. Examples can be found in the fields that analyze reaction time data, where measurements can be very large, but never below zero, which results in right-skewed distributions; see Ratcliff (1979) for a discussion on the shape of reaction time distributions. In sum, there are many common situations in which normally distributed data is an unlikely assumption.
+Third, bounded measures can also explain non-normal distributions. For example, response time can be very large, but never below zero, which results in right-skewed distributions. In sum, there are many common situations in which normally distributed data is an unlikely assumption.
 
 \hypertarget{homogeneity-of-variances-assumption}{%
 \subsection{Homogeneity of Variances Assumption}\label{homogeneity-of-variances-assumption}}
@@ -140,10 +140,13 @@ Homogeneity of variances (or homoscedasticity) is a mathematical requirement tha
 
 First, psychologists, as many scholars from various fields in human sciences, often use measured variables (e.g.~age, gender, educational level, ethnic origin, depression level, etc.) instead of random assignment to conditions. Prior to any treatment, parameters of pre-existing groups can vary largely from one population to another, as suggested by Henrich, Heine, and Norenzayan (2010). For example, Green, Deschamps, and Páez (2005) have shown that the scores of competitiveness, self-reliance and interdependence are more variable in some ethnic groups than in others. This stands true for many pre-existing groups such as gender, cultures, or religions and for various outcomes (see for example Adams, Van de Vijver, de Bruin, \& Bueno Torres, 2014; Beilmann, Mayer, Kasearu, \& Realo, 2014; Church et al., 2012; Cohen \& Hill, 2007; Haar, Russo, Suñe, \& Ollier-Malaterre, 2014; Montoya \& Briggs, 2013). Moreover, groups are sometimes defined with the intention to have different variabilities. For example, as soon as a selective school admits its students based on the results of aptitude tests, the variability will be smaller compared to a school that accepts all students.
 
-Second, a quasi-experimental treatment can have different impacts on variances between pre-existing groups, that can even be of theoretical interest. For example, in the field of linguistics and social psychology, Wasserman and Weseley (2009) investigated the impact of language gender structure on sexist attitudes of women and men. They tested differences between sexist attitude scores of subjects who read a text in English (i.e.~a language without grammatical gender) or in Spanish (i.e.~a language with grammatical gender). The results showed that (for a reason not explained by the authors), the women's score on the sexism dimension was more variable when the text was read in Spanish than in English (\(SD_{spanish}=.80 > SD_{english}=.50\)). For men, the reverse was true (\(SD_{spanish}=.97 < SD_{english}=1.33\)) \footnote{Note that this a didactic example, the differences have not been tested and might not differ statistically.}
+Second, a quasi-experimental treatment can have different impacts on variances between pre-existing groups, that can even be of theoretical interest. For example, in the field of linguistics and social psychology, Wasserman and Weseley (2009) investigated the impact of language gender structure on sexist attitudes of women and men. They tested differences between sexist attitude scores of subjects who read a text in English (i.e.~a language without grammatical gender) or in Spanish (i.e.~a language with grammatical gender). The results showed that (for a reason not explained by the authors), the women's score on the sexism dimension was more variable when the text was read in Spanish than in English (\(SD_{spanish}=.80 > SD_{english}=.50\)). For men, the reverse was true (\(SD_{spanish}=.97 < SD_{english}=1.33\)) \footnote{Note that this is a didactic example, the differences have not been tested and might not differ statistically.}
 
 Third, even when the variances of groups are the same before treatment (due to a complete succesful randomization in group assignment), unequal variances can emerge later, as a consequence of an experimental treatment (Box, 1954; Bryk \& Raudenbush, 1988; Cumming, 2005; Erceg-Hurn \& Mirosevich, 2008; Keppel \& Wickens, 2004). For example, Koeser and Sczesny (2014) have compared arguments advocating either masculine generic or gender-fair language with control messages in order to test the impact of these conditions on the use of gender-fair wording (measured as a frequency). They report that the standard deviations increase after treatment in all experimental conditions.
-\# Consequences of Assumption Violations.
+
+\hypertarget{consequences-of-assumption-violations.}{%
+\section{Consequences of Assumption Violations.}\label{consequences-of-assumption-violations.}}
+
 Assumptions violations would not be a matter per se, if the \emph{F}-test was perfectly robust against departures from them (Glass et al., 1972). When performing a test, two types of errors can be made: Type I errors and Type II errors. A Type I error consists of falsely rejecting the null hypothesis in favour of an alternative hypothesis, and the Type I error rate (\(\alpha\)) is the proportion of tests that, when sampling many times from the same population, reject the null hypothesis when there is no true effect in the population. A Type II error consists of failing to reject the null hypothesis, and the Type II error rate (\(\beta\)) is the proportion of tests, when sampling many times from the same population, that fail to reject the null hypothesis when there is a true effect. Finally, the statistical power (1-\(\beta\)) is the proportion of tests, when sampling many times from the same population, that correctly reject the null hypothesis when there is a true effect in the population.
 
 \hypertarget{violation-of-the-normality-assumption}{%
@@ -225,11 +228,11 @@ When there are only two groups to compare, the \emph{F}*-test and \emph{W}-test 
 
 We performed Monte Carlo simulations using R (version 3.5.0) to assess the Type I and Type II error rates for the three tests. One million datasets were generated for 3840 scenarios that address the arguments present in the literature. In 2560 scenarios, means were equal across all groups (i.e.~the null hypothesis is true), in order to assess the Type I error rate of the tests. In 1280 scenarios, there were differences between means (i.e.~the alternative hypothesis is true) in order to assess the power of the tests. In all scenarios, when using more than 2 samples, all samples but one was generated from the same population, and only one group had a different population mean.
 
-Population parameter values were chosen in order to illustrate the consequences of factors known to play a key role on both the Type I error rate and the statistical power when performing an ANOVA. Based on the literature review presented above, we manipulated the number of groups, the sample sizes, the sample size ratio, the \emph{SD}-ratio (\emph{SD}-ratio = \(\frac{\sigma_k}{\sigma_j}\)), and the sample size and variance pairing. In our scenarios, the number of compared groups (\emph{k}) varied from 2 to 5. Sample sizes of \emph{k}-1 groups (\(n_j\)) were 20, 30, 40, 50, or 100. The sample size of the last group was a function of the sample size ratio (\emph{n}-ratio = \(\frac{n_k}{n_j}\)), ranging from 0.5 to 2, in steps of 0.5. The simulations for which the \emph{n}-ratio equals 1 are known as a balanced design (i.e.~sample sizes are equal across all groups). The \emph{SD} of the population from which was extracted last group was a function of the \emph{SD}-ratio, with values of 0.5, 1, 2 or 4. The simulations for which the \emph{SD}-ratio equals 1 are the particular case of homoscedasticity (i.e.~equal variances across groups).
+Population parameter values were chosen in order to illustrate the consequences of factors known to play a key role on both the Type I error rate and the statistical power when performing an ANOVA. Based on the literature review presented above, we manipulated the number of groups, the sample sizes, the sample size ratio (\emph{n}-ratio = \(\frac{n_k}{n_j}\)), the \emph{SD}-ratio (\emph{SD}-ratio = \(\frac{\sigma_k}{\sigma_j}\)), and the sample size and variance pairing. In our scenarios, the number of compared groups (\emph{k}) varied from 2 to 5. Sample sizes of \emph{k}-1 groups (\(n_j\)) were 20, 30, 40, 50, or 100. The sample size of the last group was a function of the \emph{n}-ratio, ranging from 0.5 to 2, in steps of 0.5. The simulations for which the \emph{n}-ratio equals 1 are known as a balanced design (i.e.~sample sizes are equal across all groups). The \emph{SD} of the population from which was extracted last group was a function of the \emph{SD}-ratio, with values of 0.5, 1, 2 or 4. The simulations for which the \emph{SD}-ratio equals 1 are the particular case of homoscedasticity (i.e.~equal variances across groups).
 
 All possible combinations of \emph{n}-ratio and \emph{SD}-ratio were performed in order to distinguish positive pairings (the group with the largest sample size is extracted from the population with the largest \emph{SD}), negative pairings (the group with the smallest sample size is extracted from the population with the smallest \emph{SD}), and no pairing (sample sizes and/or population \emph{SD} are equal across all groups). All these conditions were tested with normal and non-normal distributions. When two groups are compared, conclusions for the three ANOVA tests (\emph{F}, \emph{F}*, \emph{W}) should yield identical error rates when compared to their equivalent \emph{t}-tests (the \emph{F}-test is equivalent to Student's \emph{t}-test, and the \emph{F}*-test and \emph{W}-test are equivalent to Welch's \emph{t}-test; Delacre et al., 2017). When there are more than three groups, the \emph{F}-test becomes increasingly liberal as soon as the variances of the distributions in each group are not similar, even when sample sizes are equal between groups (Harwell et al., 1992; Quensel, 1947).
 
-For didactic reasons, we will report only the results where we compare three groups (\emph{k}=3). Increasing the number of groups increases how liberal all tests are. For interested readers, all figures for cases where we compare more than three groups are available here: \url{https://osf.io/h4ks8/} . Overall, the larger the sample sizes, the less the distributions of the population underlying the samples impact the robustness of the tests (Srivastava, 1959). However, increasing the sample sizes does not improve the robustness of the test when there is heteroscedasticity. Interested reader can see all details in the following Excell spreadsheet, available on github : « Type I error rate.xlsx ».
+For didactic reasons, we will report only the results where we compare three groups (\emph{k}=3). Increasing the number of groups increases how liberal all tests are. For interested readers, all figures for cases where we compare more than three groups are available here: \url{https://osf.io/h4ks8/} . Overall, the larger the sample sizes, the less the distributions of the population underlying the samples impact the robustness of the tests (Srivastava, 1959). However, increasing the sample sizes does not improve the robustness of the test when there is heteroscedasticity. Interested reader can see all details in the following Excel spreadsheet, available on github : « Type I error rate.xlsx ».
 
 In sum, the simulations grouped over different sample sizes yield 9 conditions based on the \emph{n}-ratio, \emph{SD}-ratio, and sample size and variance pairing, as summarized in Table 1.
 
@@ -403,7 +406,7 @@ We can draw the following conclusions about the statistical power of the three t
 
 Taking both the effects of the assumption violations on the alpha risk and on the power, we recommend to use the \emph{W}-test instead of the \emph{F}-test to compare groups means. The \emph{F}-test and \emph{F}*-test should be avoided, because a) the equal variances assumption is often unrealistic, b) tests of the equal variances assumption will often fail to detect differences when these are present, c) the loss of power when using the \emph{W}-test is very small (and often even negligible), and d) the gain in Type I error control is considerable under a wide range of realistic conditions. Also, we recommend the use of balanced designs (i.e.~same sample sizes in each group) whenever possible. When using the \emph{W}-test, the Type I error rate is a function of criteria such as the skewness of the distributions, and whether skewness is combined with unequal variances and unequal samples sizes between groups. Our simulations show that the Type I error rate control is in general slightly better with balanced designs.
 
-Note that the \emph{W}-test suffers from limitations and cannot be used in all situations. First, as previously mentioned, \emph{W}-test, as all tests based on means, does not allow researchers to compare other relevant parameters of a distribution than the mean. For these reason, we recommend to never neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g.~histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g.~variance, skewness, kurtosis) seems to vary between groups, comparing results of the \emph{W}-test with results of a nonparametric procedure is useful in order to better understand the data. Second, with small sample sizes (i.e.~less than 50 observations per group when comparing at most four groups, 100 observations when comparing more than four groups), the \emph{W}-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. Unless you have good reasons to believe that distributions underlying the data have small kurtosis and skewness, we recommend to avoid alternative tests that are not based on means comparison, in favour of alternatives such as the trimmed means test (Erceg-Hurn \& Mirosevich, 2008) \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution. Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ.} or nonparametric tests. For more information, see Erceg-Hurn and Mirosevich (2008).
+Note that the \emph{W}-test suffers from limitations and cannot be used in all situations. First, as previously mentioned, \emph{W}-test, as all tests based on means, does not allow researchers to compare other relevant parameters of a distribution than the mean. For these reason, we recommend to never neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g.~histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g.~variance, skewness, kurtosis) seems to vary between groups, comparing results of the \emph{W}-test with results of a nonparametric procedure is useful in order to better understand the data. Second, with small sample sizes (i.e.~less than 50 observations per group when comparing at most four groups, 100 observations when comparing more than four groups), the \emph{W}-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. Unless you have good reasons to believe that distributions underlying the data have small kurtosis and skewness, we recommend to avoid alternative tests that are based on means comparison, in favour of alternatives such as the trimmed means test (Erceg-Hurn \& Mirosevich, 2008) \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution. Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ.} or nonparametric tests. For more information about robust alternatives that are based on other parameters than the mean, see Erceg-Hurn and Mirosevich (2008).
 
 \newpage
 
@@ -521,9 +524,6 @@ Overall, J. E., Atlas, R. S., \& Gibson, J. M. (1995). Tests that are robust aga
 
 \leavevmode\hypertarget{ref-Quensel_1947}{}%
 Quensel, C.-E. (1947). The validity of the *z*-criterion when the variates are taken from different normal populations. \emph{Scandinavian Actuarial Journal}, \emph{30}(1), 44--55. doi:\href{https://doi.org/10.1080/03461238.1947.10419648}{10.1080/03461238.1947.10419648}
-
-\leavevmode\hypertarget{ref-Ratcliff_1979}{}%
-Ratcliff, R. (1979). Group reaction time distributions and an analysis of distribution statistics. \emph{Psychological Bulletin}, \emph{86}(3), 446--461. doi:\href{https://doi.org/10.1037/0033-2909.86.3.446}{10.1037/0033-2909.86.3.446}
 
 \leavevmode\hypertarget{ref-Schneider_and_Penfield_1997}{}%
 Schneider, P. J., \& Penfield, D. A. (1997). Alexander and govern's approximations: Providing an alternative to anova under variance heterogeneity. \emph{The Journal of Experimental Education}, \emph{65}(3), 271--286. doi:\href{https://doi.org/10.1080/00220973.1997.9943459}{10.1080/00220973.1997.9943459}
